<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.RegistroFlotaFragment">

    <EditText
        android:id="@+id/editTextTextPersonName6"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/desc_ingresedatos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRFsoat" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/desc_ingresedatos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRFasientos" />

    <TextView
        android:id="@+id/tvRegistroCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_registroFlota"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btnRCatras"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRCatras"
        android:layout_width="29dp"
        android:layout_height="24dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/etRFplaca"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/desc_ingresedatos"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRFplaca" />

    <EditText
        android:id="@+id/etRFmodelo"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/desc_ingresedatos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRFmodelo" />

    <EditText
        android:id="@+id/etRFmarca"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/desc_ingresedatos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRFmarca" />

    <EditText
        android:id="@+id/etRFanio"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:hint="@string/desc_ingresedatos"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRFanio" />

    <Button
        android:id="@+id/btnRFRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="291dp"
        android:layout_height="48dp"
        android:backgroundTint="#e25f23"
        android:text="@string/btn_registrarvehiculo"
        android:textAllCaps="false"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="642dp" />

    <Button
        android:id="@+id/btnRCcerrar"
        android:layout_width="14dp"
        android:layout_height="21dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/tvRFplaca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/desc_placa"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegistroCliente" />

    <TextView
        android:id="@+id/tvRFanio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/desc_anio"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRFplaca" />

    <TextView
        android:id="@+id/tvRFmarca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/desc_marca"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRFanio" />

    <TextView
        android:id="@+id/tvRFmodelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/desc_modelo"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRFmarca" />

    <TextView
        android:id="@+id/tvRFasientos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/desc_asientos"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etRFmodelo" />

    <TextView
        android:id="@+id/tvRFsoat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:text="@string/desc_soat"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />


    <!-- TODO: Update blank fragment layout -->

</androidx.constraintlayout.widget.ConstraintLayout>